--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 3rem;
+
   /* color: #fff; */
 }
 
@@ -29,15 +30,15 @@ body {
 }
 
 .slide1 {
-  background-image: url("images/image1.jpg");
+  background-image: url('images/image1.jpg');
 }
 
 .slide2 {
-  background-image: url("images/image2.jpg");
+  background-image: url('images/image2.jpg');
 }
 
 .slide3 {
-  background-image: url("images/image3.jpg");
+  background-image: url('images/image3.jpg');
 }
 
 .slide-content {
@@ -51,21 +52,21 @@ body {
 }
 
 #left-arrow {
-    position: absolute;
-    border-style: solid;
-    border-width: 30px 30px 30px 0;
-    top: 50%;
-    left: 50px;
-    margin-top: -20px;
-    border-color: transparent #fff transparent transparent;
+  position: absolute;
+  border-style: solid;
+  border-width: 30px 30px 30px 0;
+  top: 50%;
+  left: 50px;
+  margin-top: -20px;
+  border-color: transparent #fff transparent transparent;
 }
 
 #right-arrow {
-    position: absolute;
-    border-style: solid;
-    border-width: 30px 0 30px 30px;
-    top: 50%;
-    right: 50px;
-    margin-top: -20px;
-    border-color: transparent transparent transparent #fff;
+  position: absolute;
+  border-style: solid;
+  border-width: 30px 0 30px 30px;
+  top: 50%;
+  right: 50px;
+  margin-top: -20px;
+  border-color: transparent transparent transparent #fff;
 }
